--- a/src/games/quiz_trademark/tradesecret-quiz.css
+++ b/src/games/quiz_trademark/tradesecret-quiz.css
@@ -2,7 +2,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   /* background: rgba(0, 0, 0, 0.3) url("/images/2.ji"); */
-  background-image: url("/games/quiz/2.jfif");
+  background-image: url("2.jfif");
   background-blend-mode: darken;
   background-size: cover;
 }
