--- a/src/homepage/homepage.css
+++ b/src/homepage/homepage.css
@@ -3,10 +3,11 @@
   margin: 0;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
+
 .container {
   width: 100%;
   height: 100vh;
-  background-image: url(/images/homepage_bg.jpg);
+  background-image: url(../../images/homepage_bg.jpg);
   background-position: center;
   background-size: cover;
   padding-left: 8%;
@@ -25,11 +26,13 @@
   cursor: pointer;
   padding-top: 5px;
 }
+
 .menu-icon {
   width: 30px;
   cursor: pointer;
   margin-left: 40px;
 }
+
 /* nav {
   flex: 1;
   text-align: right;
@@ -107,6 +110,7 @@ nav .btn {
   align-items: center;
   height: 88%;
 }
+
 .col {
   flex-basis: 50%;
 }
@@ -116,31 +120,16 @@ h1 {
   position: absolute;
   top: 25%;
   font-size: 65px;
-  text-shadow: 0px 3px 3px rgb(98,122,189), 0px 3px 0px rgb(98,122,189);
+  text-shadow: 0px 3px 3px rgb(98, 122, 189), 0px 3px 0px rgb(98, 122, 189);
   left: 6%;
-  l
-
 }
 
 p {
-  color: #f1f1f1 ;
+  color: #f1f1f1;
   line-height: normal;
   font-size: 20px;
 }
 
-/* button {
-  width: 180px;
-  color: #ffffff;
-  font-size: 18px;
-  padding: 12px 0;
-  transition: transform 0.5s;
-  border: 0;
-  border-radius: 20px;
-  outline: none;
-  margin-top: 30px;
-  cursor: pointer;
-  background-image: url(/images/homepage_explore.jpg);
-} */
 .card1 {
   width: 150px;
   height: 160px;
@@ -155,7 +144,7 @@ p {
   margin: 20px;
   box-sizing: border-box;
   cursor: pointer;
-  background-image: url(/images/homepage_TRADE\ MARK.jpg);
+  background-image: url(../../images/homepage_TRADE\ MARK.jpg);
   background-position: center;
   background-size: cover;
   transition: transform 0.5s;
@@ -163,12 +152,15 @@ p {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
 .card1:hover {
   transform: translateY(-20px);
 }
+
 .card1 p {
   text-shadow: 0 0 15px #000;
 }
+
 .card2 {
   width: 150px;
   height: 160px;
@@ -183,7 +175,7 @@ p {
   margin: 20px;
   box-sizing: border-box;
   cursor: pointer;
-  background-image: url(/images/homepage_PATENTS.png);
+  background-image: url(../../images/homepage_PATENTS.png);
   background-position: center;
   background-size: cover;
   transition: transform 0.5s;
@@ -191,12 +183,15 @@ p {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
 .card2:hover {
   transform: translateY(-20px);
 }
+
 .card2 p {
   text-shadow: 0 0 15px #000;
 }
+
 .card3 {
   width: 150px;
   height: 160px;
@@ -211,7 +206,7 @@ p {
   margin: 20px;
   box-sizing: border-box;
   cursor: pointer;
-  background-image: url(/images/homepage_COPYRIGHTS.png);
+  background-image: url(../../images/homepage_COPYRIGHTS.png);
   background-position: center;
   background-size: cover;
   transition: transform 0.5s;
@@ -219,12 +214,15 @@ p {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
 .card3:hover {
   transform: translateY(-20px);
 }
+
 .card3 p {
   text-shadow: 0 0 15px #000;
 }
+
 .card4 {
   width: 150px;
   height: 160px;
@@ -239,7 +237,7 @@ p {
   margin: 20px;
   box-sizing: border-box;
   cursor: pointer;
-  background-image: url(/images/homepage_TRADE\ SECRETS.png);
+  background-image: url(../../images/homepage_TRADE\ SECRETS.png);
   background-position: center;
   background-size: cover;
   transition: transform 0.5s;
@@ -247,12 +245,15 @@ p {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
 .card4:hover {
   transform: translateY(-20px);
 }
+
 .card4 p {
   text-shadow: 0 0 15px #000;
 }
+
 h5 {
   color: #000000;
   text-shadow: 0 0 5px #999;
@@ -264,9 +265,11 @@ h5 {
 .col1 {
   padding-right: 100px;
 }
+
 .ip-title {
   padding-bottom: 30px;
 }
+
 .ip-desc {
   font-size: 30px;
   position: absolute;
@@ -275,6 +278,7 @@ h5 {
   left: 3%;
   text-align: justify;
 }
+
 /* button:hover {
   transform: scale(1.15);
 } */
