--- a/src/patent/patent.css
+++ b/src/patent/patent.css
@@ -7,7 +7,7 @@
 .container {
   width: 100%;
   height: 100vh;
-  background-image: url(/images/patent_bg.jpg);
+  background-image: url(../../images/patent_bg.jpg);
   background-position: center;
   background-size: cover;
   padding-left: 8%;
@@ -71,44 +71,6 @@ nav .btn {
   padding: 12px;
   background-color: rgb(98, 122, 189);
 }
-
-/* .navbar {
-    height: 12%;
-    display: flex;
-    align-items: center;
-    padding: 0;
-    margin: 0;
-}
-
-.logo {
-    width: 70px;
-    cursor: pointer;
-    padding-top: 5px;
-}
-
-.menu-icon {
-    width: 30px;
-    cursor: pointer;
-    margin-left: 40px;
-    padding-left: 40px;
-}
-
-nav {
-    flex: 1;
-    text-align: right;
-}
-
-nav ul li {
-    list-style: none;
-    display: inline-block;
-    margin: 60px;
-}
-
-nav ul li a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 15px;
-} */
 
 .row {
   display: flex;
@@ -180,5 +142,5 @@ button {
   outline: none;
   margin-top: 30px;
   cursor: pointer;
-  background-image: url(/images/homepage_explore.jpg);
+  background-image: url(../../images/homepage_explore.jpg);
 }
