--- a/src/tradesecret/tradesecret.css
+++ b/src/tradesecret/tradesecret.css
@@ -7,7 +7,7 @@
 .container {
   width: 100%;
   height: 100vh;
-  background-image: url(/images/patent_bg.jpg);
+  background-image: url(../../images/patent_bg.jpg);
   background-position: center;
   background-size: cover;
   padding-left: 8%;
@@ -180,5 +180,5 @@ button {
   outline: none;
   margin-top: 30px;
   cursor: pointer;
-  background-image: url(/images/homepage_explore.jpg);
+  background-image: url(../../images/homepage_explore.jpg);
 }
