--- a/src/homepage/homepage.css
+++ b/src/homepage/homepage.css
@@ -2,24 +2,32 @@
   padding: 0;
   margin: 0;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  transition: .2s linear;
+  scroll-behavior: smooth;
 }
+
+html{
+  scroll-behavior: smooth;
+  scroll-padding-top: 6rem;
+  overflow: visible;
+}
+
+section{
+  padding: 2rem 9%;
+}
+
+
 
 .container {
   width: 100%;
   height: 100vh;
-  background-image: url(../../images/homepage_bg.jpg);
+  background-image: url(../../images/homepage_newBg.jpg);
   background-position: center;
   background-size: cover;
   padding-left: 8%;
   padding-right: 8%;
   box-sizing: border-box;
 }
-
-/* .navbar {
-  height: 12%;
-  display: flex;
-  align-items: center;
-} */
 
 .logo {
   width: 70px;
@@ -32,77 +40,132 @@
   cursor: pointer;
   margin-left: 40px;
 }
-
-/* nav {
-  flex: 1;
-  text-align: right;
-} 
-nav ul li {
-  list-style: none;
-  display: inline-block;
-  margin: 60px;
-}
-nav ul li a {
-  text-decoration: none;
-  color: #fff;
-  font-size: 15px;
-}*/
-nav {
-  box-sizing: border-box;
-  border: 2px solid rgb(38, 70, 158);
-  background-color: #fff;
-  position: fixed;
+/* Navbar Styles */
+.navbar {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  width: 100%;
   top: 0;
   left: 0;
-  width: 100%;
-  align-items: center;
+  background-color: rgb(38, 70, 158); /* Set initial transparency */
+  border-bottom: 2px solid rgb(38, 70, 158);
+  padding:0px 20px;
+  z-index: 10;
+  transition: background-color 0.4s, box-shadow 0.4s; /* Smooth transition */
 }
 
-nav h2 {
-  margin-left: 11px;
+.navbar.scrolled {
+  background-color: rgba(255, 255, 255, 1); /* Fully opaque on scroll */
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); /* Add shadow for depth */
+}
+
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+  background: none;
+}
+.dropbtn {
+  background:none;
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-size: 1.5rem;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+ color: #2980B9;
+}
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: rgb(38, 70, 158);
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
+
+
+.navbar h2 {
+  padding: 10px;
+  padding-right: 20px;
   cursor: pointer;
   color: #000;
 }
 
-nav h2 span {
+.navbar h2 span {
   font-style: italic;
-  color: rgb(38, 70, 158);
+  font-size: 6dvh;
+  color: rgb(246, 246, 246);
 }
-
-nav ul {
-  flex: 1;
-  text-align: center;
-}
-
-nav ul li {
-  display: inline-block;
-  margin: 10px 20px;
-  padding: 4px;
-}
-
-nav ul li a {
-  padding: 15px;
+.navbar .home {
+  font-size: 1.5rem;
+  padding: 0 3.5rem;
+  margin-left: 180px;
+  color: #fff;
+  font-weight: bold;
+  align-items: center;
   text-decoration: none;
-  color: #000;
-  transition: 2s;
 }
 
-nav ul li a:hover {
-  box-shadow: 0 5px 20px rgb(38, 70, 158) inset,
-    0 5px 20px rgb(38, 70, 158) inset, 0 5px 20px rgb(38, 70, 158) inset,
-    0 5px 20px rgb(38, 70, 158) inset;
+.navbar a{
+  font-size: 1.5rem;
+  padding: 0 3.5rem;
+  color: #fff;
+  font-weight: bold;
+  align-items: center;
+  text-decoration: none;
 }
 
-nav .btn {
+.navbar a:hover {
+
+  color: rgb(171, 171, 240);
+}
+
+.navbar .btn1 {
   color: #000;
   text-decoration: none;
-  margin-right: 25px;
+  margin-right: 15px;
+  box-sizing: border-box;
+  border-radius: 20px;
+  padding: 10px;
+  background-color: rgb(98, 122, 189);
+  margin-left: 200px;
+}
+.navbar .btn:hover{
+  background: rgb(172, 172, 239) ;
+}
+.navbar .btn1:hover{
+  background: rgb(172, 172, 239)  ;
+}
+.navbar .btn {
+  color: #000;
+  text-decoration: none;
+  margin-right: 50px;
   padding: 10px;
   box-sizing: border-box;
   border-radius: 20px;
-  padding: 12px;
   background-color: rgb(98, 122, 189);
+
 }
 
 .row {
@@ -116,7 +179,7 @@ nav .btn {
 }
 
 h1 {
-  color: #fff;
+  color: #202160;
   position: absolute;
   top: 25%;
   font-size: 65px;
@@ -125,7 +188,7 @@ h1 {
 }
 
 p {
-  color: #f1f1f1;
+  color: #151f6f;
   line-height: normal;
   font-size: 20px;
 }
@@ -271,14 +334,9 @@ h5 {
 }
 
 .ip-desc {
-  font-size: 30px;
+  font-size: 25px;
   position: absolute;
-  /* bottom: 5%; */
   right: 45%;
   left: 3%;
-  text-align: justify;
+  text-align: justify;
 }
-
-/* button:hover {
-  transform: scale(1.15);
-} */
