--- a/src/tradesecret/tradesecret.css
+++ b/src/tradesecret/tradesecret.css
@@ -148,8 +148,9 @@ p {
 }
 
 .ip-desc {
-  font-size: medium;
+  font-size: 23px;
   /* position:absolute; */
+  line-height: 100%;
   top: 30%;
 }
 
