--- a/src/auth/auth.css
+++ b/src/auth/auth.css
@@ -1,6 +1,6 @@
 :root {
-    --primary-color: #4EA685;
-    --secondary-color: #57B894;
+    --primary-color: #236ce2;
+    --secondary-color: #236ce2;
     --black: #000000;
     --white: #ffffff;
     --gray: #efefef;
