--- a/src/homepage/homepage.css
+++ b/src/homepage/homepage.css
@@ -4,7 +4,7 @@
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   transition: .2s linear;
   scroll-behavior: smooth;
-}
+  }
 
 html {
   scroll-behavior: smooth;
@@ -19,14 +19,29 @@ section {
 
 
 .container {
+  position: relative;
   width: 100%;
   height: 100vh;
-  background-image: url(../../images/homepage_newBg.jpg);
+  background-image: url(../../images/homepage_bg.jpg);
   background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
   padding-left: 8%;
   padding-right: 8%;
+  border-radius: 20px;
+  border-color: #000;
   box-sizing: border-box;
+}
+
+.blur {
+  
+  background: rgba(255, 255, 255, 0.7); /* Light transparent background */
+  backdrop-filter: blur(8px); /* Blur effect */
+  border-radius: 15px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  -webkit-backdrop-filter: blur(8px);
+
+  padding-top: 60%;
 }
 
 .logo {
@@ -355,8 +370,8 @@ h5 {
   padding-right: 100px;
 }
 
-.ip-title {
-  padding-bottom: 30px;
+.ip-title span {
+  padding-bottom: 10px;
 }
 
 .ip-desc {
