--- a/src/copyright/copyright.css
+++ b/src/copyright/copyright.css
@@ -84,6 +84,7 @@ nav .btn {
 .col {
   flex-basis: 50%;
   bottom: 5%;
+  max-width: 300%;
 }
 
 h1 {
@@ -102,6 +103,7 @@ p {
 
 .col1 {
   padding-right: 100px;
+  width: 80%;
 }
 
 .ip-title {
@@ -184,6 +186,9 @@ nav {
 .ip-desc {
   font-size: 16px;
   margin-bottom: 20px;
+text-align: center;
+line-height: 1.5;
+
 }
 
 .button-group {
@@ -221,13 +226,14 @@ button:hover {
   align-items: center;
   margin-bottom: 10px;
 
-  font-size: x-large;
+  font-size: 150%;
 }
 
 .sliding-facts p {
   margin: 0 15px;
   line-height: 1;
-  font-size: x-large;
+
+  font-size: 70%;
 }
 
 
