--- a/src/copyright/copyright.css
+++ b/src/copyright/copyright.css
@@ -184,6 +184,8 @@ nav {
 .ip-desc {
   font-size: 16px;
   margin-bottom: 20px;
+  text-align: center;
+  line-height: 1.3;
 }
 
 .button-group {
@@ -221,13 +223,13 @@ button:hover {
   align-items: center;
   margin-bottom: 10px;
 
-  font-size: x-large;
+  font-size: 150%;
 }
 
 .sliding-facts p {
   margin: 0 15px;
   line-height: 1;
-  font-size: x-large;
+  font-size: 80%;
 }
 
 
