--- a/src/homepage/homepage.css
+++ b/src/homepage/homepage.css
@@ -16,30 +16,41 @@ section {
   padding: 2rem 9%;
 }
 
-
-
 .container {
+  position: relative;
   width: 100%;
   height: 100vh;
-  background-image: url(../../images/homepage_newBg.jpg);
+  background-image: url(../../images/homepage_bg.jpg);
   background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
   padding-left: 8%;
   padding-right: 8%;
+  border-radius: 20px;
+  border-color: #000;
   box-sizing: border-box;
 }
 
-.logo {
-  width: 70px;
-  cursor: pointer;
-  padding-top: 5px;
+.col1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 50px;
+  width: 50%;
 }
 
-.menu-icon {
-  width: 30px;
-  cursor: pointer;
-  margin-left: 40px;
+ .blur {
+  background-color: rgba(192, 225, 242, 0.8); /* Semi-transparent white */
+  padding: 150px;
+  border-radius: 10px;
+  backdrop-filter: blur(-10%);
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  transform: translateY(70px);
+  height: 200px;
+  width: 120%;
 }
+
 
 /* Navbar Styles */
 .navbar {
@@ -197,11 +208,19 @@ section {
 .row {
   display: flex;
   align-items: center;
-  height: 88%;
+  justify-content: space-between;
+  height: 90%;
+  width: 100%;
+  box-sizing: border-box;
+  border-color: #000;
 }
 
 .col {
   flex-basis: 50%;
+  padding: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
 }
 
 h1 {
@@ -233,17 +252,18 @@ p {
   margin: 20px;
   box-sizing: border-box;
   cursor: pointer;
-  background-image: url(../../images/homepage_TRADE\ MARK.jpg);
+  background-image: url(../../images/homepage_TRADE\ MARK1.jpg);
   background-position: center;
   background-size: cover;
-  transition: transform 0.5s;
+  transition: transform 0.5s ease-in-out;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  transform: translateX(-80px);
 }
 
 .card1:hover {
-  transform: translateY(-20px);
+  transform: scale(1.2) translateX(-80px);
 }
 
 .card1 p {
@@ -271,10 +291,11 @@ p {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  transform: translateX(-70px);
 }
 
 .card2:hover {
-  transform: translateY(-20px);
+  transform: scale(1.2) translateX(-70px);
 }
 
 .card2 p {
@@ -302,10 +323,12 @@ p {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  transform: translateX(-80px);
 }
 
 .card3:hover {
   transform: translateY(-20px);
+  transform: scale(1.2) translateX(-80px);
 }
 
 .card3 p {
@@ -333,10 +356,12 @@ p {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  transform: translateX(-70px);
 }
 
 .card4:hover {
   transform: translateY(-20px);
+  transform: scale(1.2) translateX(-70px);
 }
 
 .card4 p {
@@ -355,14 +380,125 @@ h5 {
   padding-right: 100px;
 }
 
-.ip-title {
-  padding-bottom: 30px;
-}
+/* .ip-title span {
+  padding-bottom: 10px;
+   */
+   .ip-title {
+    font-size: 3.5rem;
+    text-align: left; /* Left align the title */
+    top: 10%;
+  }
+  
+  .ip-desc {
+    font-size: 2rem;
+    text-align: justify;
+    transform: translateX(-82px);
+    
+  }
 
-.ip-desc {
-  font-size: 25px;
-  position: absolute;
-  right: 45%;
-  left: 3%;
-  text-align: justify;
-}
+
+  @media (max-width: 1200px) {
+    .navbar h2 span {
+      font-size: 5dvh;
+    }
+  
+    .container {
+      height: auto;
+      padding: 0 5%;
+    }
+  
+    .row {
+      flex-direction: column;
+      height: auto;
+    }
+  
+    .col1 {
+      width: 100%;
+      padding: 20px;
+    }
+  
+    .col {
+      flex-basis: 100%;
+      padding: 20px;
+    }
+  
+    h1 {
+      font-size: 50px;
+      left: 4%;
+    }
+  
+    .ip-title {
+      font-size: 3rem;
+    }
+  
+    .ip-desc {
+      font-size: 1.5rem;
+    }
+  }
+  
+  @media (max-width: 768px) {
+    .navbar h2 span {
+      font-size: 4dvh;
+    }
+  
+    .container {
+      height: auto;
+      padding: 0 3%;
+    }
+  
+    .col1 {
+      padding: 10px;
+      width: 100%;
+    }
+  
+    h1 {
+      font-size: 40px;
+      top: 20%;
+      left: 3%;
+    }
+  
+    .ip-title {
+      font-size: 2.5rem;
+    }
+  
+    .ip-desc {
+      font-size: 1.25rem;
+    }
+  
+    .card1{
+      width: 120px;
+      height: 140px;
+    }
+    .card2 {
+      width: 120px;
+      height: 140px;
+    }
+    .card3 {
+      width: 120px;
+      height: 140px;
+    }
+    .card4 {
+      width: 120px;
+      height: 140px;
+    }
+  }
+  
+  @media (max-width: 576px) {
+    .navbar h2 span {
+      font-size: 3.5dvh;
+    }
+  
+    h1 {
+      font-size: 35px;
+      top: 15%;
+      left: 2%;
+    }
+  
+    .ip-title {
+      font-size: 2rem;
+    }
+  
+    .ip-desc {
+      font-size: 1;
+    }
+  }
