--- a/src/homepage/homepage.css
+++ b/src/homepage/homepage.css
@@ -252,7 +252,7 @@ p {
   margin: 20px;
   box-sizing: border-box;
   cursor: pointer;
-  background-image: url(../../images/homepage_TRADE\ MARK.jpg);
+  background-image: url(../../images/homepage_TRADE\ MARK1.jpg);
   background-position: center;
   background-size: cover;
   transition: transform 0.5s ease-in-out;
