--- a/src/homepage/homepage.css
+++ b/src/homepage/homepage.css
@@ -76,6 +76,59 @@ section {
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   /* Add shadow for depth */
 }
+/* Submenu styling */
+.dropdown-submenu {
+  position: relative;
+}
+
+.subdropbtn {
+  background: none;
+  border: none;
+  font-size: 1rem;
+  padding: 12px 16px;
+  cursor: pointer;
+  display: block;
+  width: 100%;
+  text-align: left;
+  font-size: 1.2rem;
+  color: rgb(38, 70, 158);
+  font-weight: bold;
+  align-items: center;
+  text-decoration: none;
+}
+
+.subdropbtn a:hover {
+  color: rgb(171, 171, 240);
+}
+
+/* Submenu content hidden by default */
+.submenu-content {
+  display: none;
+  position: absolute;
+  left: 100%; /* Positions the submenu to open sideways */
+  top: 0;
+  background-color: white;
+  min-width: 250px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+}
+
+/* Show submenu content on hover */
+.dropdown-submenu:hover .submenu-content {
+  display: block;
+}
+
+/* Submenu links */
+.submenu-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of submenu links on hover */
+.submenu-content a:hover {
+  background-color: #ddd;
+}
 
 
 /* The container <div> - needed to position the dropdown content */
