--- a/src/copyright/copyright.css
+++ b/src/copyright/copyright.css
@@ -14,62 +14,158 @@
   padding-right: 8%;
   box-sizing: border-box;
 }
-nav {
-  box-sizing: border-box;
-  border: 2px solid rgb(38, 70, 158);
-  background-color: #fff;
-  position: fixed;
+
+/* Navbar Styles */
+.navbar {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  width: 100%;
   top: 0;
   left: 0;
-  width: 100%;
-  align-items: center;
+  background-color: rgb(38, 70, 158);
+  /* Set initial transparency */
+  border-bottom: 2px solid rgb(38, 70, 158);
+  padding: 0px 20px;
+  z-index: 10;
+  transition: background-color 0.4s, box-shadow 0.4s;
+  /* Smooth transition */
 }
 
-nav h2 {
-  margin-left: 11px;
+.navbar.scrolled {
+  background-color: rgba(255, 255, 255, 1);
+  /* Fully opaque on scroll */
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  /* Add shadow for depth */
+}
+
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+  background: none;
+  margin-right: 20px;
+}
+
+.dropbtn {
+  background: none;
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-size: 1.5rem;
+  margin-right: 20px;
+  font-weight: bold;
+  /* Add space between buttons */
+}
+
+
+/* Dropdown button on hover & focus */
+.dropdown:hover .dropdown-content {
+  display: block;
+  /* Show the dropdown content on hover */
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: white;
+  min-width: 300px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {
+  display: block;
+}
+
+
+.navbar h2 {
+  padding: 10px;
+  padding-right: 20px;
   cursor: pointer;
   color: #000;
 }
 
-nav h2 span {
+.navbar h2 span {
   font-style: italic;
+  font-size: 6dvh;
+  color: rgb(246, 246, 246);
+}
+
+.navbar .home {
+  font-size: 1.5rem;
+  padding: 0 3.5rem;
+  margin-left: 180px;
+  color: #fff;
+  font-weight: bold;
+  align-items: center;
+  text-decoration: none;
+}
+
+.navbar a {
+  font-size: 1.2rem;
   color: rgb(38, 70, 158);
-}
-
-nav ul {
-  flex: 1;
-  text-align: center;
-}
-
-nav ul li {
-  display: inline-block;
-  margin: 10px 20px;
-  padding: 4px;
-}
-
-nav ul li a {
-  padding: 15px;
+  font-weight: bold;
+  align-items: center;
   text-decoration: none;
-  color: #000;
-  transition: 2s;
 }
 
-nav ul li a:hover {
-  box-shadow: 0 5px 20px rgb(38, 70, 158) inset,
-    0 5px 20px rgb(38, 70, 158) inset, 0 5px 20px rgb(38, 70, 158) inset,
-    0 5px 20px rgb(38, 70, 158) inset;
+.navbar a:hover {
+
+  color: rgb(171, 171, 240);
 }
 
-nav .btn {
-  color: #000;
+.navbar .dropbtn:hover {
+
+  color: rgb(171, 171, 240);
+}
+
+.navbar .btn1 {
+  color: white;
   text-decoration: none;
-  margin-right: 25px;
+  margin-right: 15px;
+  box-sizing: border-box;
+  border-radius: 20px;
+  padding: 10px;
+  background-color: rgb(98, 122, 189);
+  margin-left: 100px;
+}
+
+.navbar .btn:hover {
+  background: rgb(206, 206, 210);
+}
+
+.navbar .btn1:hover {
+  background: rgb(206, 206, 210);
+}
+
+.navbar .btn {
+  color: white;
+  text-decoration: none;
+  margin-right: 50px;
   padding: 10px;
   box-sizing: border-box;
   border-radius: 20px;
-  padding: 12px;
   background-color: rgb(98, 122, 189);
+
 }
 
 .row {
