logogame implemented with firebase
logogame implemented with firebase, images stored in firebase and fetched random questions from firebase

--- a/src/games/logoquiz/logoGame.css
+++ b/src/games/logoquiz/logoGame.css
@@ -84,3 +84,11 @@ img {
     bottom: 10%;
     right: 45%;
 }
+
+.loading {
+    display: none;
+    text-align: center;
+    font-size: 20px;
+    color: #333;
+    margin-top: 20px;
+}
