--- a/src/games/wordsearch/WordSearch.css
+++ b/src/games/wordsearch/WordSearch.css
@@ -91,6 +91,7 @@ h1 {
     align-items: center;
     position: fixed;
     width: 100%;
+    height: 9%;
     top: 0;
     left: 0;
     background-color: rgb(38, 70, 158);
