--- a/src/copyright/copyright.css
+++ b/src/copyright/copyright.css
@@ -2,247 +2,395 @@
   padding: 0;
   margin: 0;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  transition: .2s linear;
+  scroll-behavior: smooth;
 }
 
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 6rem;
+  overflow: visible;
+}
+
+section {
+  padding: 2rem 9%;
+}
+
+/* Container Styles */
 .container {
+  position: relative;
   width: 100%;
   height: 100vh;
-  background-image: url(../../images/patent_bg.jpg);
+  background-image: url(../../images/homepage_bg.jpg);
   background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
   padding-left: 8%;
   padding-right: 8%;
+  border-radius: 20px;
+  border-color: #000;
   box-sizing: border-box;
 }
 
-nav {
-  box-sizing: border-box;
-  border: 2px solid rgb(38, 70, 158);
-  background-color: #fff;
-  position: fixed;
+.blur {
+  background-color: rgba(192, 225, 242, 0.8);
+  /* Semi-transparent white */
+  padding: 150px;
+  border-radius: 10px;
+  backdrop-filter: blur(-10%);
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  transform: translateY(70px);
+  height: 230px;
+  width: 150%;
+  margin-top: 8%;
+  transform: translateX(-40px);
+}
+
+.navbar {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  width: 100%;
   top: 0;
   left: 0;
-  width: 100%;
-  align-items: center;
+  background-color: rgb(38, 70, 158);
+  /* Set initial transparency */
+  border-bottom: 2px solid rgb(38, 70, 158);
+  padding: 0px 20px;
+  z-index: 10;
+  transition: background-color 0.4s, box-shadow 0.4s;
+  /* Smooth transition */
 }
 
-nav h2 {
-  margin-left: 11px;
+.navbar.scrolled {
+  background-color: rgba(255, 255, 255, 1);
+  /* Fully opaque on scroll */
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  /* Add shadow for depth */
+}
+
+/* Submenu styling */
+.dropdown-submenu {
+  position: relative;
+}
+
+.subdropbtn {
+  background: none;
+  border: none;
+  font-size: 1rem;
+  padding: 12px 16px;
+  cursor: pointer;
+  display: block;
+  width: 100%;
+  text-align: left;
+  font-size: 1.2rem;
+  color: rgb(38, 70, 158);
+  font-weight: bold;
+  align-items: center;
+  text-decoration: none;
+}
+
+
+
+/* Submenu content hidden by default */
+.submenu-content {
+  display: none;
+  position: absolute;
+  left: 100%;
+  /* Positions the submenu to open sideways */
+  top: 0;
+  background-color: white;
+  min-width: 280px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+}
+
+/* Show submenu content on hover */
+.dropdown-submenu:hover .submenu-content {
+  display: block;
+}
+
+.dropdown-content .dropdown-submenu a:hover {
+  color: rgb(38, 70, 158);
+}
+
+/* Submenu links */
+.submenu-content a {
+  color: rgb(38, 70, 158);
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of submenu links on hover */
+/* .submenu-content a:hover {
+  background-color: #ddd;
+} */
+
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+  background: none;
+  margin-right: 20px;
+}
+
+.navbar .dropbtn {
+  background: none;
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-size: 1.5rem;
+  margin-right: 20px;
+  font-weight: bold;
+  /* Add space between buttons */
+}
+
+.navbar .dropbtn:hover {
+
+  color: rgb(171, 171, 240);
+}
+
+/* Dropdown button on hover & focus */
+.dropdown:hover .dropdown-content {
+  display: block;
+  /* Show the dropdown content on hover */
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: white;
+  min-width: 300px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: rgb(38, 70, 158);
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+
+
+
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {
+  display: block;
+}
+
+
+.navbar h2 {
+  padding: 10px;
+  padding-right: 20px;
   cursor: pointer;
   color: #000;
 }
 
-nav h2 span {
+.navbar h2 span {
   font-style: italic;
+  font-size: 6dvh;
+  color: rgb(246, 246, 246);
+}
+
+.navbar .home {
+  font-size: 1.5rem;
+  padding: 0 3.5rem;
+  color: #fff;
+  font-weight: bold;
+}
+
+.navbar a {
+  font-size: 1.2rem;
   color: rgb(38, 70, 158);
-}
-
-nav ul {
-  flex: 1;
-  text-align: center;
-}
-
-nav ul li {
-  display: inline-block;
-  margin: 10px 20px;
-  padding: 4px;
-}
-
-nav ul li a {
-  padding: 15px;
+  font-weight: bold;
+  align-items: center;
   text-decoration: none;
-  color: #000;
-  transition: 2s;
 }
 
-nav ul li a:hover {
-  box-shadow: 0 5px 20px rgb(38, 70, 158) inset,
-    0 5px 20px rgb(38, 70, 158) inset, 0 5px 20px rgb(38, 70, 158) inset,
-    0 5px 20px rgb(38, 70, 158) inset;
+.navbar a:hover {
+
+  color: rgb(171, 171, 240);
 }
 
-nav .btn {
-  color: #000;
+
+
+.navbar .btn1 {
+  color: white;
   text-decoration: none;
-  margin-right: 25px;
+  margin-right: 15px;
+  box-sizing: border-box;
+  border-radius: 20px;
+  padding: 10px;
+  background-color: rgb(98, 122, 189);
+  margin-left: 200px;
+}
+
+
+.navbar .btn1:hover {
+  background: rgb(206, 206, 210);
+}
+
+.navbar .btn {
+  color: white;
+  text-decoration: none;
+  margin-right: 50px;
   padding: 10px;
   box-sizing: border-box;
   border-radius: 20px;
-  padding: 12px;
   background-color: rgb(98, 122, 189);
+
+}
+
+.navbar .btn:hover {
+  background: rgb(206, 206, 210);
 }
 
 .row {
   display: flex;
   align-items: center;
-  height: 88%;
-  position: absolute;
-  top: 15%;
+  justify-content: space-between;
+  height: 90%;
+  width: 100%;
+  box-sizing: border-box;
+  border-color: #000;
 }
 
-.col {
-  flex-basis: 50%;
-  bottom: 5%;
-}
 
 h1 {
-  color: #fff;
-  font-size: 60px;
+  color: #202160;
+  position: absolute;
+  top: 25%;
+  font-size: 65px;
+  text-shadow: 0px 3px 3px rgb(98, 122, 189), 0px 3px 0px rgb(98, 122, 189);
+  left: 6%;
+
 }
 
-p {
-  color: #fff;
-  line-height: 15px;
-  font-size: 11px;
-  /* position: absolute; */
-  height: 30%;
-  bottom: 5%;
-}
+
 
 .col1 {
-  padding-right: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 50px;
+
 }
 
+/* IP Section Styles */
 .ip-title {
-  padding-bottom: 30px;
-  position: absolute;
-  top: -5%;
+  font-size: 3.5rem;
+  text-align: left;
+  /* Left align the title */
+  top: 10%;
+  margin-left: 30px;
 }
 
 .ip-desc {
-  font-size: medium;
-  /* position:absolute; */
-  top: 30%;
+  font-size: 1.3rem;
+  text-align: justify;
+  transform: translateX(-155px);
+  width: 500px;
 }
 
+/* Card Styles */
 .card {
   width: 400px;
   height: 350px;
   display: inline-block;
   border-radius: 20px;
-  margin: 100px;
-  margin-right: 200px;
+  margin-left: 550px;
+  transform: translateY(-250px);
   box-sizing: border-box;
   cursor: default;
   background-size: cover;
 }
 
-button:hover {
-  transform: scale(1.15);
-}
-
+/* Button Hover Effects */
 button {
-  width: 180px;
   color: #ffffff;
   font-size: 18px;
-  padding: 12px 0;
+  padding: 12px;
   transition: transform 0.5s;
   border: 0;
-  border-radius: 1000px;
+  border-radius: 10px;
   outline: none;
-  margin-top: 30px;
   cursor: pointer;
-  background-image: url(../../images/homepage_explore.jpg);
+  background-color: rgb(130, 154, 218);
 }
 
-* {
-  padding: 0;
+/* Add a flex container inside .blur for button alignment */
+.button-container {
+  display: flex;
+  gap: 1rem;
+  justify-content: flex-start;
+  
+
+}
+
+.button-container button {
+  width: auto;
+  /* Fit button to text */
   margin: 0;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  /* Remove extra margin */
+  padding: 0.8rem 1.6rem;
 }
 
-.container {
-  width: 100%;
-  height: 100vh;
-  background-image: url(../../images/patent_bg.jpg);
-  background-position: center;
-  background-size: cover;
-  padding-left: 8%;
-  padding-right: 8%;
-  box-sizing: border-box;
-}
-
-nav {
-  box-sizing: border-box;
-  border: 2px solid rgb(38, 70, 158);
-  background-color: #fff;
-  position: fixed;
-  display: flex;
-  top: 0;
-  left: 0;
-  width: 100%;
-  align-items: center;
-}
-
-
-.ip-title {
-  font-size: 36px;
-  margin-bottom: 20px;
-}
-
-.ip-desc {
-  font-size: 16px;
-  margin-bottom: 20px;
-}
-
-.button-group {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-button {
-  width: 180px;
-  color: #ffffff;
-  font-size: 18px;
-  padding: 12px 0;
-  transition: transform 0.5s;
-  border: 0;
-  border-radius: 1000px;
-  outline: none;
-  cursor: pointer;
-  background-color: rgb(98, 122, 189);
+button a {
+  text-decoration: none;
+  color: #202160;
+  font-weight: bold
 }
 
 button:hover {
   transform: scale(1.15);
 }
 
-.top-right {
-  position: absolute;
-  top: 5%;
-  right: 0%;
-  color: #fff;
-}
-
+/* Sliding Facts Styles */
+/* Sliding Facts Styles */
 .sliding-facts {
   display: flex;
   align-items: center;
+  justify-content: center;
+  gap: 5px;
   margin-bottom: 10px;
-
   font-size: x-large;
+  color: #16163b;
 }
 
 .sliding-facts p {
-  margin: 0 15px;
-  line-height: 1;
-  font-size: x-large;
+  margin: 0 50px;
+  line-height: normal;
+  font-size: 1.2rem;
+  color: #151f6f;
+  text-align: justify;
+  left: 6%;
+
 }
 
+/* Navigation Arrow Styles */
 
 .nav-arrow {
   cursor: pointer;
-  font-size: 24px;
-  padding: 0 10px;
+  font-size: 2rem;
+  color: #16163b;
   user-select: none;
-  color: #ffffff;
+  transition: color 0.3s;
+  transform: translateX(-150px);
 }
 
 .nav-arrow:hover {
-  color: #ffde59;
-}
-
-.youtube-video {
-  margin-top: 20px;
+  color: #77bdd9;
 }
