--- a/src/tradesecret/tradesecret.css
+++ b/src/tradesecret/tradesecret.css
@@ -4,181 +4,178 @@
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
+
+/* Container Styles */
 .container {
   width: 100%;
   height: 100vh;
-  background-image: url(../../images/patent_bg.jpg);
+  background-image: url(../../images/homepage_bg.jpg);
   background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
-  padding-left: 8%;
-  padding-right: 8%;
-  box-sizing: border-box;
-}
-nav {
-  box-sizing: border-box;
-  border: 2px solid rgb(38, 70, 158);
-  background-color: #fff;
-  position: fixed;
+  padding: 0 5%;
   display: flex;
-  top: 0;
-  left: 0;
-  width: 100%;
+  flex-direction: column;
   align-items: center;
-}
-
-nav h2 {
-  margin-left: 11px;
-  cursor: pointer;
-  color: #000;
-}
-
-nav h2 span {
-  font-style: italic;
-  color: rgb(38, 70, 158);
-}
-
-nav ul {
-  flex: 1;
-  text-align: center;
-}
-
-nav ul li {
-  display: inline-block;
-  margin: 10px 20px;
-  padding: 4px;
-}
-
-nav ul li a {
-  padding: 15px;
-  text-decoration: none;
-  color: #000;
-  transition: 2s;
-}
-
-nav ul li a:hover {
-  box-shadow: 0 5px 20px rgb(38, 70, 158) inset,
-    0 5px 20px rgb(38, 70, 158) inset, 0 5px 20px rgb(38, 70, 158) inset,
-    0 5px 20px rgb(38, 70, 158) inset;
-}
-
-nav .btn {
-  color: #000;
-  text-decoration: none;
-  margin-right: 25px;
-  padding: 10px;
+  justify-content: space-evenly;
   box-sizing: border-box;
-  border-radius: 20px;
-  padding: 12px;
-  background-color: rgb(98, 122, 189);
 }
 
-/* .navbar {
-    height: 12%;
-    display: flex;
-    align-items: center;
-    padding: 0;
-    margin: 0;
+.cont{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.logo {
-    width: 70px;
-    cursor: pointer;
-    padding-top: 5px;
+.facts-container{
+  overflow: hidden;
 }
-
-.menu-icon {
-    width: 30px;
-    cursor: pointer;
-    margin-left: 40px;
-    padding-left: 40px;
+.blur {
+  background-color: rgba(192, 225, 242, 0.8);
+  border-radius: 10px;
+  backdrop-filter: blur(5px);
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  height:65%;
+  padding: 2rem;
 }
-
-nav {
-    flex: 1;
-    text-align: right;
-}
-
-nav ul li {
-    list-style: none;
-    display: inline-block;
-    margin: 60px;
-}
-
-nav ul li a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 15px;
-} */
 
 .row {
   display: flex;
-  align-items: center;
-  height: 88%;
-  position: absolute;
-  top: 15%;
+  /* align-items: center; */
+  /* justify-content: space-between; */
+  height: 80%;
+  width: 103%;
+  /* box-sizing: border-box; */
+  border-color: #000;
 }
 
-.col {
-  flex-basis: 50%;
-  bottom: 5%;
-}
 
 h1 {
-  color: #fff;
-  font-size: 60px;
+  color: #202160;
+  position: absolute;
+  top: 25%;
+  font-size: 65px;
+  text-shadow: 0px 3px 3px rgb(98, 122, 189), 0px 3px 0px rgb(98, 122, 189);
+  left: 6%;
+
 }
 
-p {
-  color: #fff;
-  line-height: 15px;
-  font-size: 11px;
-  /* position: absolute; */
-  height: 30%;
-  bottom: 5%;
-}
+
 
 .col1 {
-  padding-right: 100px;
+  display: flex;
+  /* align-items: center; */
+  /* flex-direction: column; */
+  /* align-items: flex-start; */
+  /* max-height: fit-content; */
+  /* height: 50px; */
+  padding-top: 170px;
+  padding-left: 60px;
 }
 
+/* IP Section Styles */
 .ip-title {
-  padding-bottom: 30px;
-  position: absolute;
-  top: -5%;
+  font-size: 3.5rem;
+  text-align: left;
+  /* Left align the title */
+  left: 7%;
+  top: 15%;
+  transform: translateX(-1px);
+  
 }
 
-.ip-desc {
-  font-size: medium;
-  /* position:absolute; */
-  top: 30%;
-}
+/* .ip-desc {
+  font-size: 1.3rem;
+  text-align: justify;
+  transform: translateX(-120px);
+  width: 500px;
+} */
 
+/* Card Styles */
 .card {
-  width: 400px;
-  height: 350px;
   display: inline-block;
   border-radius: 20px;
-  margin: 100px;
-  margin-right: 200px;
   box-sizing: border-box;
   cursor: default;
-  background-size: cover;
+  /* transform: translateX(-100px); */
+  /* transform: translateY(-100px); */
+  /* padding-top: -100px; */
+  padding-right: 60px; 
+  margin-top: -50px;
 }
 
-button:hover {
-  transform: scale(1.15);
+/* Button Hover Effects */
+.button-container {
+  color: rgb(26, 51, 63);
+  text-decoration: none;
+  /* margin-right: 30px; */
+  padding: 10px;
+  box-sizing: border-box;
+  border-radius: 20px;
+  background-color: rgba(122, 199, 238, 0.8);
+  font-weight: bold;
+  position: relative;
+  display: flex;
 }
 
-button {
-  width: 180px;
-  color: #ffffff;
-  font-size: 18px;
-  padding: 12px 0;
-  transition: transform 0.5s;
-  border: 0;
-  border-radius: 1000px;
-  outline: none;
-  margin-top: 30px;
+.button-container:hover{
+  background-color: #99b1f4;
+
+}
+
+/* Sliding Facts Styles */
+.sliding-facts {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 90px;
+  font-size: x-large;
+  color: #16163b;
+}
+
+.sliding-facts p {
+  margin-right:100px;
+  line-height: 34px;
+  font-size: 1.8rem;
+  color: #151f6f;
+  text-align: justify;
+  transform: translateX(-40px);
+  /* margin-left: 0; */
+}
+
+/* Navigation Arrow Styles */
+
+.nav-arrow {
   cursor: pointer;
-  background-image: url(../../images/homepage_explore.jpg);
+  font-size: 2.5rem;
+  color: #16163b;
+  user-select: none;
+  transition: color 0.3s;
+  transform: translateX(-50px);
+}
+
+.nav-arrow:hover {
+  background-color: #77bdd9;
+}
+
+.game-tags{
+  display: flex;
+  flex-direction: row;
+  margin-top: 0px;
+}
+
+.game-btn{
+  margin-left: 40px;
+  width: 150px;
+}
+.game-btn a{
+  justify-content: center;
+  font-size: 1.4rem;
+  padding: 14px;
+  border-radius: 15px;
 }
